--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,36 @@
     <string name="hr_date_size">hr_date_size</string>
     <string name="hr_date_format">hr_date_format</string>
     <string name="hr_date_color">hr_date_color</string>
+    <string name="widget_text">1. Long-press on an empty area on the home screen of your Phone where you want to place a widget.
+        \n\n 2. From the menu that pops up at the bottom, tap on Widgets.
+        \n\n 3. Now, proceed to select the app whose widget you\'d like to add to your home screen.
+        \n\n 4. If a widget is available in multiple sizes, you will first have to select the size you want to use. The widget size will be shown at the top alongside its type. Tap on Add after that.
+        \n\n 5. You can move the widget around on your home screen by long-pressing it and dragging it to your desired position."</string>
+
+    <string-array name="custom_weekdays">
+        <item>Su</item>
+        <item>M</item>
+        <item>Tu</item>
+        <item>W</item>
+        <item>Th</item>
+        <item>F</item>
+        <item>Sa</item>
+    </string-array>
+
+    <string-array name="custom_months">
+        <item>Muharram</item>
+        <item>Safar</item>
+        <item>Rabi\' I</item>
+        <item>Rabi\' II</item>
+        <item>Jumada I</item>
+        <item>Jumada II</item>
+        <item>Rajab</item>
+        <item>Sha\'ban</item>
+        <item>Ramadan</item>
+        <item>Shawwal</item>
+        <item>Dhu al-Qi‘dah</item>
+        <item>Dhu al-Hijjah</item>
+    </string-array>
 
 
 </resources>
